--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -11,6 +11,13 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+      
+    - name: Setup
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11.1' 
+    - name: run    
+      run: python APPCRM.py
     
 
 
