--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         python-version: '3.11.1' 
     - name: run    
-      run: python APPCRM.py
+      run: python MSPR/api_revendeur/APPCRM.py 
     
 
 
