--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -16,8 +16,8 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.11.1' 
-    - name: run    
-      run: python MSPR/api_revendeur/APPCRM.py 
+    - name: test 
+      run: py_compile 
     
 
 
