--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -17,9 +17,9 @@ jobs:
       with:
         python-version: '3.11.1'
     - name: Install dependencies
-      run: pip install -r packages.yaml
+      run: pip install -r api_revendeur/packages.yaml
     - name: Run tests
-      run: python -m unittest discover tests
+      run: python -m unittest discover api_revendeur/tests
     
 
 
