--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -17,9 +17,12 @@ jobs:
       with:
         python-version: '3.11.1'
     - name: Install dependencies
-      run: pip install -r api_revendeur/packages.yaml
+       python -m pip install --upgrade pip
+      run: python -m pip install --upgrade pip
+       pip install -r api_revendeur/packages.yaml
     - name: Run tests
-      run: python -m pytest discover api_revendeur/tests
+      run: pip install pytest
+       python -m pytest discover api_revendeur/tests
         
   analyze:
     needs: build
