--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -12,17 +12,20 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
       
+    - name: Dir
+      run: cd ./api_revendeur
+      
     - name: Setup
       uses: actions/setup-python@v4
       with:
         python-version: '3.11.1'
     - name: Install dependencies
+      run:
        python -m pip install --upgrade pip
-      run: python -m pip install --upgrade pip
        pip install -r api_revendeur/packages.yaml
     - name: Run tests
       run: pip install pytest
-       python pytest discover api_revendeur/tests
+       python pytest 
         
   analyze:
     needs: build
