--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,4 +1,4 @@
-name: ci cd nnn
+name: cicd 
  
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v3
       
     - name: Dir
-      run: cd ./api_revendeur
+      run: cd ./api_webshop
       
     - name: Setup
       uses: actions/setup-python@v4
@@ -22,28 +22,8 @@ jobs:
     - name: Install dependencies
       run: |
        python -m pip install --upgrade pip
-       pip install -r api_revendeur/packages.yaml
+       pip install -r api_webshop/packages.yaml
     - name: Run tests
       run: |
        pip install pytest
-       pytest api_revendeur/test_app.py
-        
-  analyze:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Set up Sonarqube
-      uses: sonarsource/setup-sonarqube@v1
-      with:
-        url: ${{ env.SONAR_URL }}
-        token: ${{ secrets.SONAR_LOGIN }}
-    - name: Analyze code
-      run: |
-        sonar-scanner 
-          -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
-          -Dsonar.sources=.
-          -Dsonar.host.url=${{ env.SONAR_URL }}
-
-
+       pytest api_webshop/test_app_webshop.py
