--- a/.github/workflows/flutter_app.yml
+++ b/.github/workflows/flutter_app.yml
@@ -2,7 +2,7 @@ name: CI/CD de test Flutter
 
 on:
   push:
-    branches: main
+    branches: master
 
 jobs:
   build:
@@ -19,7 +19,9 @@ jobs:
         - name: Get dependencies
           run: flutter pub get
         - name: Run tests
-          run: flutter test
+          run: |
+           cd /mobile_app/test
+           flutter test 
         - name: Run tests
           run: flutter build apk
         - name: Run tests
